<resources>
    <string name="app_name">Task Scheduler</string>
    <string name="title_activity_week_view">WeekView</string>
    <string name="title_activity_task_view">TaskView</string>
    <string name="title_navigation_sidebar">Navigation Sidebar</string>
    <string name="title_activity_task_edit">Edit Task</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_date_display">1999–99–99</string>
    <!-- Personal Settings -->
    <string name="personal_settings_category">Personal Settings</string>
    <string name="pref_name">displayName</string>
    <string name="pref_name_title">Display Name</string>
    <string name="pref_name_summary">Sets name to display in app</string>
    <string name="pref_name_default">Android User</string>

    <!-- Remote Database Settings -->
    <string name="pref_rdb_category">Remote Database</string>
    <string name="pref_rdb">remoteDB</string>
    <string name="pref_rdb_summary">Connect to a remote database for tasks</string>
    <string name="pref_rdb_uri_title">Remote Database URI</string>
    <string name="pref_rdb_uri">remoteDB_uri</string>
    <string name="pref_rdb_uri_summary">IP or URI of remote database</string>
    <string name="pref_rdb_uri_default"></string> <!--Defaults to Empty, at least for now -->
    <string name="pref_rdb_port">remoteDB_port</string>
    <string name="pref_rdb_port_title">Port</string>
    <string name="pref_rdb_port_summary">The port opened to access remote database</string>
    <string name="pref_rdb_port_default">8010</string>

    <!-- Sideview Text -->
    <string name="settings_text">Preferences</string>
    <string name="btn_complete_task_txt">Complete Task</string>
    <string name="btn_delete_task_txt">Delete Task</string>
    <string name="btn_edit_task_txt">Edit Task</string>
    <string name="btn_show_sidebar_txt">SHOW SIDEBAR</string>
    <string name="view_description_txt">Description</string>
    <string name="priority_txt">Priority:</string>
    <string name="end_time_txt">End at:</string>
    <string name="completed_txt">Completed:</string>
    <string name="description_hint">Description</string>
    <string name="btn_done_txt">Done</string>
    <string name="btn_cancel_txt">Cancel</string>
    <string name="btn_completion_percent_txt">Completion Percent</string>
    <string name="priority_hint">Priority</string>
    <string name="time_end_hint">Time-End</string>
    <string name="time_start_hint">Time-Start</string>
    <string name="task_name_hint">Task name</string>
    <string name="view_date_txt">Date:</string>
    <string name="force_sync_txt">Force Sync</string>
    <string name="daily_view_txt">Daily View</string>
    <string name="start_date_title_view">Start Date</string>
    <string name="completion_percentage_title_view">Completion Percentage</string>
    <string name="description_title_view">Description</string>
    <string name="task_title_title_view">Task Title</string>
    <string name="settings_settings_title">Settings</string>
    <string name="task_add_text">+</string>
    <string name="refresh_text">Refresh</string>

</resources>
