<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- TO-DO: TURN THIS INTO A LISTVIEW !-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changeDateBar"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_date_txt">
        </TextView>
        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/textDateDisplay"
            android:focusable="false"
            android:onClick="pickDate"
            android:selectAllOnFocus="true"
            android:inputType="datetime">
        </EditText>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dailyTaskList"
        android:background="@color/colorGray"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/completion_percentage_title" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:text="@string/btn_show_sidebar_txt"
        android:onClick="swipeButton"
        android:id="@+id/dtvShowNavigation"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/task_title_title_view"
        android:id="@+id/task_title_title"
        android:layout_below="@+id/changeDateBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_date_title_view"
        android:id="@+id/start_date_title"
        android:layout_below="@+id/changeDateBar"
        android:layout_toLeftOf="@+id/completion_percentage_title" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/completion_percentage_title_view"
        android:id="@+id/completion_percentage_title"
        android:layout_alignTop="@+id/task_title_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description_title_view"
        android:id="@+id/textView8"
        android:layout_below="@+id/task_title_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>