<!-- ##################################################################
Michael Good, mjg5632
2/11/2016, CMPSC475
################################################################## !-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.razzaliaxindiferous.taskscheduler.DailyTaskList">

    <!-- daily task view date !-->
 <!-- add task !-->
    <item android:id="@+id/addTask_actionButton"
        android:orderInCategory="102"
        android:title="@string/task_add_text"
        android:icon="@mipmap/task_add"
        android:onClick="addTask"
        app:showAsAction="always"/>
    <!-- settings !-->
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings_settings_title"
    app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="101"
        android:icon="@drawable/task_refresh"
        android:onClick="refreshList"
        android:title="@string/refresh_text"
        app:showAsAction="ifRoom"/>
    <!-- <item
        android:id="@+id/menu_showCompleted"
        android:orderInCategory="100"
        android:title="Toggle Show Completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_showOverdue"
        android:orderInCategory="100"
        android:title="Toggle Show Overdue"
        app:showAsAction="never" /> -->
</menu>

    <!-- android:title="@string/action_settings" -->
